# mapprojax

./: .gitignore  DEVELOPER.md  GEMINI.md  benchmark.py  benchmark_blocking.py  benchmark_optimization.py  benchmark_precision.py  pyproject.toml  reproject_fits_example.py  reproject_package_comparison.py  reproject_sip.py
benchmarks/: benchmark.py  benchmark_blocking.py  benchmark_optimization.py  benchmark_precision.py  benchmarks.md
docs/: implementation.md  implementation_adaptive.md  jax_migration.md  user_manual.md
docs/benchmarks/: blocking_results.md  optimization_results.md
docs/sip/: sip_implementation.md
reproj_test/: extract_wcs_coords.py  wcs_test_data.json
src/mapprojax/: __init__.py  adaptive.py  base.py  jax_base.py  jax_projections.py  projections.py  sip.py  utils.py  wcs_utils.py
src/mapprojax/io/asdf/: converters.py  extension.py
src/mapprojax/resources/manifests/: mapprojax-1.0.0.yaml
src/mapprojax/resources/schemas/: wcs-1.0.0.yaml
tests/: run_tests.py  test_adaptive_blocking.py  test_adaptive_reproject.py  test_projections.py  test_sin_reference.py  test_sip.py  test_utils.py  test_wcs_json.py  verify_jax.py
